--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -16,7 +16,7 @@
     </div>
     <div class="Gap1"></div>
     <div class="searchDropdown"> 
-          <label for="locationsDropdown"  class="Label">Location:</label>
+          <label for="locationsDropdown"  class="Label">To Location:</label>
           <select class="form-control dropDownInput" id="locationsDropdown" name="locationsDropdown"></select> 
     </div>
     <div class="Gap1"></div>
