--- a/Views/FulfillSales/Index.cshtml
+++ b/Views/FulfillSales/Index.cshtml
@@ -100,7 +100,7 @@
                    { label: 'Customer',name: 'customer', editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'City',name: 'city', editable: true, edittype:"text",editoptions: { readonly: 'readonly'}},
                    { label: 'Carrier',name: 'carrierID', editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getCarrier()}},
-                   { label: 'Instructions',name: 'instructions', editable: true,editoptions: { readonly: 'readonly'}},
+                   { label: 'Instructions',name: 'instructions', editable: true},
                    { label: 'Status',name: 'status',  editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Short',name: 'shortInv',  editable: false,editoptions: { readonly: 'readonly'}}
 
