-adding cannabis page

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,34 +31,40 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sales</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                 <a class="dropdown-item" asp-area="" asp-controller="FulfillSales" asp-action="Index">Fulfill Sales</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="CustomerOrder" asp-action="Index">Customer Order</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="CustomerSummary" asp-action="Index">Customer Summary</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="Inventory" asp-action="Index">Inventory</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="FulfillSales" asp-action="Index">Fulfill Sales</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="CustomerOrder" asp-action="Index">Customer Order</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="CustomerSummary" asp-action="Index">Customer Summary</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Inventory" asp-action="Index">Inventory</a>
                             </div>
-                         </li>                
-                         <li class="nav-item dropdown">
-                                 <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Stock Adjustment</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Stock Adjustment</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                 <a class="dropdown-item" asp-area="" asp-controller="InvTxSummary" asp-action="Index">Adjustment Summary</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="InvAdj" asp-action="Index">Inventory Adjustment</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="SaDamageRecoup" asp-action="Index">Damage/Recoup</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="SaExciseDuty" asp-action="Index">Excise Duty Paid</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="SaInternalTransfer" asp-action="Index">Internal Transfer</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="SaOutbound" asp-action="Index">Outbound Transfer</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="SaRelease" asp-action="Index">Release from Bond</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="SaStockReceived" asp-action="Index">Stock Received</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="InvTxSummary" asp-action="Index">Adjustment Summary</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="InvAdj" asp-action="Index">Inventory Adjustment</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="SaDamageRecoup" asp-action="Index">Damage/Recoup</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="SaExciseDuty" asp-action="Index">Excise Duty Paid</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="SaInternalTransfer" asp-action="Index">Internal Transfer</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="SaOutbound" asp-action="Index">Outbound Transfer</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="SaRelease" asp-action="Index">Release from Bond</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="SaStockReceived" asp-action="Index">Stock Received</a>
                             </div>
-                         </li>
-                         <li class="nav-item dropdown">
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cannabis</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-area="" asp-controller="ReceivedCannabisOrder" asp-action="Index">Received order</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Maintenance</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                 <a class="dropdown-item" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Product</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="Customers" asp-action="Index">Customer</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="InvAdjTest" asp-action="Index">Inventory Adjustment Test</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Product</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Customers" asp-action="Index">Customer</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="InvAdjTest" asp-action="Index">Inventory Adjustment Test</a>
                             </div>
-                         </li> 
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
